test/org/midica/testfiles/failing/chord-with-unknown-note.midica
INCLUDE_FILE inc/instruments.midica

CHORD test c d e c+5
